# Trace911

./: .gitignore  Makefile  README.md  package.json  trace911.db
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  pubsub.py
backend/app/api/: calls.py  incidents.py  metrics.py  ws.py
backend/app/models/: __init__.py  orm.py
backend/app/repository/: __init__.py  calls.py  incident.py  transcript.py
backend/app/schemas/: __init__.py  call.py  incident.py  metrics.py  transcript.py
backend/app/services/: audio_enhancement.py  extraction.py  operator_assist.py  stt.py
calls/: analyze.py  clean_audio.py  metrics.txt  server.py  speak.py  stream_transcribe.py  wer.py
docs/: api-contracts.md  app-spec.md  data-model.md  metrics.md  websocket-events.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  styles.css
frontend/src/components/trace911/: AudioPanel.tsx  MetricsAnalysisPanel.tsx  Navbar.tsx  ThemeToggle.tsx  TranscriptPanel.tsx  Waveform.tsx  audioBus.ts
frontend/src/pages/: Index.tsx
